[project]
name = "secretask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.15"
dependencies = [
    "aiogram>=3.29.1",
    "peewee>=4.1.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
